# zuora-nightly-ui

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  USER_GUIDE.md  entrypoint.sh  fly.toml  pyproject.toml  run-dev.sh
.github/workflows/: fly-deploy.yml
backend/app/: auth.py  backfill.py  billing.py  catalog_import.py  config.py  crypto.py  db.py  deps.py  main.py  models.py  runner.py  scheduler.py  schemas.py  tenant_config.py
backend/app/routers/api/: core.py
backend/skill_workdir/.claude/skills/zuora-demo-data-nightly/: SKILL.md
backend/skill_workdir/.claude/skills/zuora-demo-data-nightly/scripts/: zuora_helpers.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/layout/: Shell.tsx
frontend/src/components/schedules/: CronBuilder.tsx  SchedulesSection.tsx
frontend/src/components/tenants/: BackfillModal.tsx  CatalogImportModal.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  select.tsx
frontend/src/lib/: api.ts  types.ts  utils.ts
frontend/src/pages/: BackfillJobPage.tsx  BillingPage.tsx  ChatPage.tsx  DashboardPage.tsx  LoginPage.tsx  RunDetailPage.tsx  RunHistoryPage.tsx  TenantConfigPage.tsx  TenantFormPage.tsx
tickets/: 0001-payments-and-writeoffs.md  README.md
