[project]
name = "zuora-nightly-ui"
version = "0.1.0"
description = "Internal UI for running the zuora-demo-data-nightly skill per team member, per tenant."
requires-python = ">=3.11"

dependencies = [
    # web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.17",
    "itsdangerous>=2.2",             # session cookies
    # auth
    "authlib>=1.3",                  # Google OAuth
    "httpx>=0.27",                   # authlib transport
    # db
    "sqlalchemy>=2.0",
    # crypto
    "cryptography>=44",              # Fernet
    # config
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    # claude / skill execution
    "claude-agent-sdk>=0.1",
    # scheduling
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This project is not actually installed as a distribution. The `app` package
# lives under backend/ and is put on sys.path by the launcher (run-dev.sh)
# via a plain .pth file. We only declare pyproject to get `pip install -e .`
# to resolve our runtime dependencies — the empty package list below is
# intentional, telling setuptools not to try to install anything at build time.
packages = []

[tool.ruff]
line-length = 100
target-version = "py311"
